# PracticasIG

./: CMakeLists.txt
Examen/: Examen.cpp
Practica1/: practica1.cpp
Practica2/: practica2.cpp
Practica3/: practica3.cpp
Practica4/: practica4.cpp
Practica5/: Camera.h  practica5.cpp
Practica6/: Camera.cpp  Camera.h  practica6.cpp
Practica7/: Camera.cpp  Camera.h  practica7.cpp
